# AI_AGENT_SEGMENTATION_REPORTS

./: .dockerignore  .env.example  .gitignore  8.22.0  AI_REPORTS_README.md  Dockerfile  Dockerfile.reports  README.md  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
TEST/: analisis_cruces_test.py  datos_hornitos_enero_2026.csv  radiografia_json.py  rastrear_discrepancia.py  ver_fabian.py
data_provisional/: cruces_analytics_15_20251222_100322.json  cruces_analytics_15_20251222_100425.json  cruces_analytics_15_20251222_101328.json  cruces_analytics_15_20251222_101426.json  cruces_analytics_15_20251222_101737.json  cruces_analytics_15_20251222_101838.json  cruces_analytics_15_20251222_101922.json  cruces_analytics_38_20251209_135737.json  cruces_analytics_38_20251209_135858.json  cruces_analytics_38_20251209_140017.json  cruces_analytics_38_20251209_140227.json  cruces_analytics_38_20251209_141954.json  cruces_analytics_38_20251209_142021.json  cruces_analytics_38_20251209_151952.json  cruces_analytics_38_20251209_152133.json  formularioscsv.csv
data_provisional/analytics/: analytics_empresa_42_20260311_101601.json
infrastructure/docker/: Dockerfile  docker-compose.yml
scripts/: auditos.py  diag_dd.py  generate_all.py  generate_all_reports.py  generate_analytics_company.py  regenerate_pdf.py  test_filters.py
src/: main.py
src/analytics_modules/: analyzer.py  builder.py  commons.py
src/analytics_modules/cruces_entidades/: __init__.py  cruces_analytics.py  cruces_graph_generator.py
src/analytics_modules/sector_ubicacion/: graph_generator.py  html_generator.py  sector_geo_analytics.py
src/core/: config.py  config2.py  security.py
src/db/: base.py  base2.py
src/db/models/: ai_report.py  cliente.py  cruces_entidades_analytics.py  empleado.py  formulario.py  generated_report.py  html_report.py  proveedor.py  reference_tables.py  sector_ubicacion_analytics.py
src/db/repositories/: cruces_entidades_analytics_repo.py  generated_report_repo.py  html_report_repo.py  riesgo_repo.py  sector_ubicacion_analytics_repo.py
src/ml_pipelines/: __init__.py  data_loader.py  feature_engineering.py  model_trainer.py  train.py
src/rta_api/: main.py
src/rta_api/api/v1/: analytics.py  auth.py  cruces.py  geo.py  maintenance.py  ml.py  reports.py  sector_ubicacion.py
src/services/: cruces_analytics_service.py  local_ai_report_service.py  map_image_service.py  pdf_risk_report_service.py  pdf_risk_report_service_v2.py  purge_service.py  report_orchestrator.py  s3_service.py  sector_analytics_service.py
templates/: analisis.html  base.html  error.html  index.html  tabla.html
tests/: test_hybrid_logic.py
