[project]
name = "riesgo-transaccional-analytics"
version = "0.1.0"
description = "Microservicio para analítica de riesgo transaccional, generación de vistas, gráficos e informes IA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.3.0",
    "ruff>=0.4.0",
    "ipython>=8.22.0"
]

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = []
