[project]
name = "riesgo-transaccional-analytics"
version = "0.1.0"
description = "Microservicio para analítica de riesgo transaccional, generación de vistas, gráficos e informes IA."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "cryptography>=41.0.0",
    "reportlab>=4.0.0",
    "pydantic-settings>=2.1.0",
    "mysql-connector-python>=8.3.0",
    "PyJWT>=2.8.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "boto3>=1.34.0"
]

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = []
